--- a/css/Assignment08.css
+++ b/css/Assignment08.css
@@ -91,6 +91,7 @@ label.error{
 	color: green;
 	font-weight: bold;
 	font-size: 14pt; 
+	margin-bottom: 30pt;
 }
 
 #dialog label, #dialog input { display:block; }
